--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rn-user"
 version = "0.1.0"
-authors = ["DDT5 <eggtarteat@protonmail.com>"]
+authors = ["DDT5"]
 edition = "2018"
 
 exclude = [
@@ -40,3 +40,4 @@ cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "
 schemars = "0.7"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 snafu = { version = "0.6.3" }
+secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit", tag = "v0.1.1-debug-print" }
